# TrabalhoFinalBD

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  app.py  docker-compose.yml  nixpacks.toml  package-lock.json  package.json  pyproject.toml  turbo.json  yoyo.ini
apps/api/: main.py  package.json
apps/api/core/: config.py  database.py
apps/api/modules/: __init__.py
apps/api/modules/analytics/: repository.py  router.py
apps/api/modules/customers/: models.py  repository.py  router.py
apps/api/modules/menu/: models.py  repository.py  router.py
apps/api/modules/orders/: models.py  router.py  service.py
apps/ui/: config.py  main.py  package.json  schemas.py
apps/ui/.streamlit/: config.toml
apps/ui/components/: cards.py  dashboard_ui.py  forms.py  sidebar.py
apps/ui/core/: __init__.py  ioc.py
apps/ui/pages/: 1_Dashboard.py  2_Orders.py  3_Menu.py  4_Staff.py  5_Customers.py  6_Tables.py  7_Reviews.py  8_Kitchen.py
apps/ui/services/: analytics.py  api_client.py  customers.py  menu.py  order.py  reviews.py  staff.py  system.py  tables.py
apps/ui/utils/: calculations.py
apps/ui/viewmodels/: __init__.py  customers.py  dashboard.py  kitchen.py  menu.py  orders.py  reviews.py  staff.py  table.py
apps/ui/views/: __init__.py  customers_view.py  dashboard_view.py  kitchen_view.py  menu_view.py  orders_view.py  reviews_view.py  staff_view.py  tables_view.py
backend/: main.py
backend/core/: config.py  database.py  logging_config.py
backend/modules/: __init__.py
backend/modules/analytics/: models.py  repository.py  router.py
backend/modules/customers/: models.py  repository.py  router.py
backend/modules/menu/: models.py  repository.py  router.py
backend/modules/orders/: models.py  router.py  service.py
backend/modules/reviews/: models.py  repository.py  router.py
backend/modules/staff/: routers.py
backend/modules/tables/: models.py  repository.py  router.py
db/migrations/: 001_create_schema.sql  002_update_order_schema.sql
db/scripts/: generate_seed_sql.py  migrate.py  reset.py  seed.py
db/seeds/: 002_seed_infrastructure.sql  003_seed_customers.sql  004_seed_orders.sql  005_seed_reviews.sql  006_reset_sequences.sql
frontend/: config.py  main.py  schemas.py
frontend/.streamlit/: config.toml
frontend/components/: cards.py  dashboard_ui.py  forms.py  sidebar.py
frontend/pages/: 1_Dashboard.py  2_Orders.py  3_Menu.py  4_Staff.py  5_Customers.py  6_Tables.py  7_Reviews.py  8_Kitchen.py
frontend/services/: analytics.py  api_client.py  customers.py  menu.py  order.py  reviews.py  staff.py  system.py  tables.py
frontend/utils/: calculations.py  exceptions.py
(+52 files in other folders)
